Add `WB-MAI2-mini/CC v.3` support

--- a/templates/config-wb-mai2-cc.json
+++ b/templates/config-wb-mai2-cc.json
@@ -5,6 +5,9 @@
     "hw": [
         {
             "signature": "MAI2CC"
+        },
+        {
+            "signature": "WB-MAI2-mini/CC v.3"
         }
     ],
     "device": {
