--- a/templates/config-map6s-fw2.json
+++ b/templates/config-map6s-fw2.json
@@ -314,6 +314,16 @@
                 "group": "channel_1"
             },
             {
+                "name": "N 1",
+                "reg_type": "input",
+                "address": "0x1586",
+                "type": "value",
+                "format": "s32",
+                "scale": 0.000244141,
+                "round_to": 0.01,
+                "group": "channel_1"
+            },
+            {
                 "name": "S 1",
                 "reg_type": "input",
                 "address": "0x1316",
@@ -378,6 +388,28 @@
                 "group": "channel_1"
             },
             {
+                "name": "NP energy 1",
+                "reg_type": "input",
+                "address": "0x150c",
+                "type": "value",
+                "format": "u64",
+                "scale": 1e-5,
+                "round_to": 1e-6,
+                "word_order": "little_endian",
+                "group": "channel_1"
+            },
+            {
+                "name": "NN energy 1",
+                "reg_type": "input",
+                "address": "0x151c",
+                "type": "value",
+                "format": "u64",
+                "scale": 1e-5,
+                "round_to": 1e-6,
+                "word_order": "little_endian",
+                "group": "channel_1"
+            },
+            {
                 "name": "Phase angle 1",
                 "reg_type": "input",
                 "address": "0x10fb",
@@ -423,6 +455,16 @@
                 "name": "Q 2",
                 "reg_type": "input",
                 "address": "0x130c",
+                "type": "value",
+                "format": "s32",
+                "scale": 0.000244141,
+                "round_to": 0.01,
+                "group": "channel_2"
+            },
+            {
+                "name": "N 2",
+                "reg_type": "input",
+                "address": "0x1584",
                 "type": "value",
                 "format": "s32",
                 "scale": 0.000244141,
@@ -494,6 +536,28 @@
                 "group": "channel_2"
             },
             {
+                "name": "NP energy 2",
+                "reg_type": "input",
+                "address": "0x1508",
+                "type": "value",
+                "format": "u64",
+                "scale": 1e-5,
+                "round_to": 1e-6,
+                "word_order": "little_endian",
+                "group": "channel_2"
+            },
+            {
+                "name": "NN energy 2",
+                "reg_type": "input",
+                "address": "0x1518",
+                "type": "value",
+                "format": "u64",
+                "scale": 1e-5,
+                "round_to": 1e-6,
+                "word_order": "little_endian",
+                "group": "channel_2"
+            },
+            {
                 "name": "Phase angle 2",
                 "reg_type": "input",
                 "address": "0x10fa",
@@ -539,6 +603,16 @@
                 "name": "Q 3",
                 "reg_type": "input",
                 "address": "0x130a",
+                "type": "value",
+                "format": "s32",
+                "scale": 0.000244141,
+                "round_to": 0.01,
+                "group": "channel_3"
+            },
+            {
+                "name": "N 3",
+                "reg_type": "input",
+                "address": "0x1582",
                 "type": "value",
                 "format": "s32",
                 "scale": 0.000244141,
@@ -610,6 +684,28 @@
                 "group": "channel_3"
             },
             {
+                "name": "NP energy 3",
+                "reg_type": "input",
+                "address": "0x1504",
+                "type": "value",
+                "format": "u64",
+                "scale": 1e-5,
+                "round_to": 1e-6,
+                "word_order": "little_endian",
+                "group": "channel_3"
+            },
+            {
+                "name": "NN energy 3",
+                "reg_type": "input",
+                "address": "0x1514",
+                "type": "value",
+                "format": "u64",
+                "scale": 1e-5,
+                "round_to": 1e-6,
+                "word_order": "little_endian",
+                "group": "channel_3"
+            },
+            {
                 "name": "Phase angle 3",
                 "reg_type": "input",
                 "address": "0x10f9",
@@ -655,6 +751,16 @@
                 "name": "Q 4",
                 "reg_type": "input",
                 "address": "0x230e",
+                "type": "value",
+                "format": "s32",
+                "scale": 0.000244141,
+                "round_to": 0.01,
+                "group": "channel_4"
+            },
+            {
+                "name": "N 4",
+                "reg_type": "input",
+                "address": "0x2586",
                 "type": "value",
                 "format": "s32",
                 "scale": 0.000244141,
@@ -726,6 +832,28 @@
                 "group": "channel_4"
             },
             {
+                "name": "NP energy 4",
+                "reg_type": "input",
+                "address": "0x250c",
+                "type": "power_consumption",
+                "format": "u64",
+                "scale": 1e-5,
+                "round_to": 1e-6,
+                "word_order": "little_endian",
+                "group": "channel_4"
+            },
+            {
+                "name": "NN energy 4",
+                "reg_type": "input",
+                "address": "0x251c",
+                "type": "value",
+                "format": "u64",
+                "scale": 1e-5,
+                "round_to": 1e-6,
+                "word_order": "little_endian",
+                "group": "channel_4"
+            },
+            {
                 "name": "Phase angle 4",
                 "reg_type": "input",
                 "address": "0x20fb",
@@ -771,6 +899,16 @@
                 "name": "Q 5",
                 "reg_type": "input",
                 "address": "0x230c",
+                "type": "value",
+                "format": "s32",
+                "scale": 0.000244141,
+                "round_to": 0.01,
+                "group": "channel_5"
+            },
+            {
+                "name": "N 5",
+                "reg_type": "input",
+                "address": "0x2584",
                 "type": "value",
                 "format": "s32",
                 "scale": 0.000244141,
@@ -842,6 +980,28 @@
                 "group": "channel_5"
             },
             {
+                "name": "NP energy 5",
+                "reg_type": "input",
+                "address": "0x2508",
+                "type": "power_consumption",
+                "format": "u64",
+                "scale": 1e-5,
+                "round_to": 1e-6,
+                "word_order": "little_endian",
+                "group": "channel_5"
+            },
+            {
+                "name": "NN energy 5",
+                "reg_type": "input",
+                "address": "0x2518",
+                "type": "value",
+                "format": "u64",
+                "scale": 1e-5,
+                "round_to": 1e-6,
+                "word_order": "little_endian",
+                "group": "channel_5"
+            },
+            {
                 "name": "Phase angle 5",
                 "reg_type": "input",
                 "address": "0x20fa",
@@ -887,6 +1047,16 @@
                 "name": "Q 6",
                 "reg_type": "input",
                 "address": "0x230a",
+                "type": "value",
+                "format": "s32",
+                "scale": 0.000244141,
+                "round_to": 0.01,
+                "group": "channel_6"
+            },
+            {
+                "name": "N 6",
+                "reg_type": "input",
+                "address": "0x2582",
                 "type": "value",
                 "format": "s32",
                 "scale": 0.000244141,
@@ -950,6 +1120,28 @@
                 "name": "RN energy 6",
                 "reg_type": "input",
                 "address": "0x2234",
+                "type": "value",
+                "format": "u64",
+                "scale": 1e-5,
+                "round_to": 1e-6,
+                "word_order": "little_endian",
+                "group": "channel_6"
+            },
+            {
+                "name": "NP energy 6",
+                "reg_type": "input",
+                "address": "0x2504",
+                "type": "power_consumption",
+                "format": "u64",
+                "scale": 1e-5,
+                "round_to": 1e-6,
+                "word_order": "little_endian",
+                "group": "channel_6"
+            },
+            {
+                "name": "NN energy 6",
+                "reg_type": "input",
+                "address": "0x2514",
                 "type": "value",
                 "format": "u64",
                 "scale": 1e-5,
@@ -1101,31 +1293,43 @@
                 "RP energy 1": "Энергия RP 1",
                 "AN energy 1": "Энергия AN 1",
                 "RN energy 1": "Энергия RN 1",
+                "NP energy 1": "Энергия NP 1",
+                "NN energy 1": "Энергия NN 1",
                 "Phase angle 1": "Угол между I1 и U",
                 "AP energy 2": "Энергия AP 2",
                 "RP energy 2": "Энергия RP 2",
                 "AN energy 2": "Энергия AN 2",
                 "RN energy 2": "Энергия RN 2",
+                "NP energy 2": "Энергия NP 2",
+                "NN energy 2": "Энергия NN 2",
                 "Phase angle 2": "Угол между I2 и U",
                 "AP energy 3": "Энергия AP 3",
                 "RP energy 3": "Энергия RP 3",
                 "AN energy 3": "Энергия AN 3",
                 "RN energy 3": "Энергия RN 3",
+                "NP energy 3": "Энергия NP 3",
+                "NN energy 3": "Энергия NN 3",
                 "Phase angle 3": "Угол между I3 и U",
                 "AP energy 4": "Энергия AP 4",
                 "RP energy 4": "Энергия RP 4",
                 "AN energy 4": "Энергия AN 4",
                 "RN energy 4": "Энергия RN 4",
+                "NP energy 4": "Энергия NP 4",
+                "NN energy 4": "Энергия NN 4",
                 "Phase angle 4": "Угол между I4 и U",
                 "AP energy 5": "Энергия AP 5",
                 "RP energy 5": "Энергия RP 5",
                 "AN energy 5": "Энергия AN 5",
                 "RN energy 5": "Энергия RN 5",
+                "NP energy 5": "Энергия NP 5",
+                "NN energy 5": "Энергия NN 5",
                 "Phase angle 5": "Угол между I5 и U",
                 "AP energy 6": "Энергия AP 6",
                 "RP energy 6": "Энергия RP 6",
                 "AN energy 6": "Энергия AN 6",
                 "RN energy 6": "Энергия RN 6",
+                "NP energy 6": "Энергия NP 6",
+                "NN energy 6": "Энергия NN 6",
                 "Phase angle 6": "Угол между I6 и U",
                 "Yes": "Да",
                 "No": "Нет",
