--- a/templates/config-map12h-fw2.json
+++ b/templates/config-map12h-fw2.json
@@ -834,8 +834,8 @@
                 "address": "0x1504",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel1_l1"
             },
@@ -845,8 +845,8 @@
                 "address": "0x1514",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel1_l1"
             },
@@ -1021,8 +1021,8 @@
                 "address": "0x1508",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel1_l2"
             },
@@ -1032,8 +1032,8 @@
                 "address": "0x1518",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel1_l2"
             },
@@ -1208,8 +1208,8 @@
                 "address": "0x150c",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel1_l3"
             },
@@ -1219,8 +1219,8 @@
                 "address": "0x151c",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel1_l3"
             },
@@ -1365,8 +1365,8 @@
                 "address": "0x1500",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel1_total"
             },
@@ -1376,8 +1376,8 @@
                 "address": "0x1510",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel1_total"
             },
@@ -1582,8 +1582,8 @@
                 "address": "0x2504",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel2_l1"
             },
@@ -1593,8 +1593,8 @@
                 "address": "0x2514",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel2_l1"
             },
@@ -1769,8 +1769,8 @@
                 "address": "0x2508",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel2_l2"
             },
@@ -1780,8 +1780,8 @@
                 "address": "0x2518",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel2_l2"
             },
@@ -1956,8 +1956,8 @@
                 "address": "0x250c",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel2_l3"
             },
@@ -1967,8 +1967,8 @@
                 "address": "0x251c",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel2_l3"
             },
@@ -2113,8 +2113,8 @@
                 "address": "0x2500",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel2_total"
             },
@@ -2124,8 +2124,8 @@
                 "address": "0x2510",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel2_total"
             },
@@ -2330,8 +2330,8 @@
                 "address": "0x3504",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel3_l1"
             },
@@ -2341,8 +2341,8 @@
                 "address": "0x3514",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel3_l1"
             },
@@ -2517,8 +2517,8 @@
                 "address": "0x3508",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel3_l2"
             },
@@ -2528,8 +2528,8 @@
                 "address": "0x3518",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel3_l2"
             },
@@ -2704,8 +2704,8 @@
                 "address": "0x350c",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel3_l3"
             },
@@ -2715,8 +2715,8 @@
                 "address": "0x351c",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel3_l3"
             },
@@ -2861,8 +2861,8 @@
                 "address": "0x3500",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel3_total"
             },
@@ -2872,8 +2872,8 @@
                 "address": "0x3510",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel3_total"
             },
@@ -3078,8 +3078,8 @@
                 "address": "0x4504",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel4_l1"
             },
@@ -3089,8 +3089,8 @@
                 "address": "0x4514",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel4_l1"
             },
@@ -3265,8 +3265,8 @@
                 "address": "0x4508",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel4_l2"
             },
@@ -3276,8 +3276,8 @@
                 "address": "0x4518",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel4_l2"
             },
@@ -3452,8 +3452,8 @@
                 "address": "0x450c",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel4_l3"
             },
@@ -3463,8 +3463,8 @@
                 "address": "0x451c",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel4_l3"
             },
@@ -3609,8 +3609,8 @@
                 "address": "0x4500",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel4_total"
             },
@@ -3620,8 +3620,8 @@
                 "address": "0x4510",
                 "type": "value",
                 "format": "u32",
-                "scale": 0.291271,
-                "round_to": 0.0001,
+                "scale": 6.781694e-11,
+                "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel4_total"
             },
