add fw version field to some wb-map templates

--- a/templates/config-map12h-fw2.json
+++ b/templates/config-map12h-fw2.json
@@ -4,7 +4,7 @@
     "group": "g-wb-old",
     "hw": [
         {
-            "signature": "MAP12\u0002H",
+            "signature": "MAP12H",
             "fw": "2.0.0"
         }
     ],
