--- a/templates/config-map3ev.json
+++ b/templates/config-map3ev.json
@@ -4,7 +4,8 @@
     "group": "g-wb",
     "hw": [
         {
-            "signature": "MAP3E\u0002"
+            "signature": "MAP3E",
+            "fw": "2.0.0"
         }
     ],
     "device": {
