--- a/templates/config-map6s-fw2.json
+++ b/templates/config-map6s-fw2.json
@@ -6,6 +6,10 @@
         {
             "signature": "MAP6S",
             "fw": "2.0.0"
+        },
+        {
+            "signature": "MAP6SE",
+            "fw": "2.0.0"
         }
     ],
     "device": {
