--- a/templates/config-map3h-fw2.json
+++ b/templates/config-map3h-fw2.json
@@ -4,7 +4,8 @@
     "group": "g-wb-old",
     "hw": [
         {
-            "signature": "MAP3H\u0002"
+            "signature": "MAP3H",
+            "fw": "2.0.0"
         }
     ],
     "device": {
