--- a/templates/config-map6s-fw2.json
+++ b/templates/config-map6s-fw2.json
@@ -4,10 +4,12 @@
     "group": "g-wb",
     "hw": [
         {
-            "signature": "MAP6S\u0002E"
+            "signature": "MAP6S",
+            "fw": "2.0.0"
         },
         {
-            "signature": "MAP6S\u0002"
+            "signature": "MAP6SE",
+            "fw": "2.0.0"
         }
     ],
     "device": {
