--- a/templates/config-mst-24.json
+++ b/templates/config-mst-24.json
@@ -25,14 +25,14 @@
     ],
     "setup": [
       {
-        "title": "Work Mode",
+        "title": "work_mode",
         "address": 17,
         "value": 0,
         "reg_type": "holding",
         "format": "u16"
       },
       {
-        "title": "Drive Mode",
+        "title": "drive_mode",
         "address": 22,
         "value": 0,
         "reg_type": "holding",
@@ -49,7 +49,7 @@
         ]
       },
       {
-        "title": "Return",
+        "title": "return",
         "address": 287,
         "value": 6,
         "reg_type": "holding",
@@ -74,7 +74,7 @@
         ]
       },
       {
-        "title": "Internal Logic Preset",
+        "title": "internal_logic_preset",
         "address": 20,
         "value": 0,
         "reg_type": "holding",
@@ -83,7 +83,7 @@
     ],
     "parameters": [
       {
-        "title": "Motor Type",
+        "title": "motor_type",
         "id": "motor_type",
         "address": 21,
         "default": 0,
@@ -100,7 +100,7 @@
         "group": "settings"
       },
       {
-        "title": "Current Limit (mA)",
+        "title": "current_limit",
         "id": "current_limit",
         "address": 284,
         "default": 3000,
@@ -111,7 +111,7 @@
     ],
     "channels": [
       {
-        "name": "Errors",
+        "name": "errors",
         "id": "errors",
         "reg_type": "holding",
         "address": 0,
@@ -122,7 +122,7 @@
         "readonly": true
       },
       {
-        "name": "Status",
+        "name": "status",
         "id": "status",
         "reg_type": "holding",
         "address": 1,
@@ -133,7 +133,7 @@
         "readonly": true
       },
       {
-        "name": "Voltage",
+        "name": "voltage",
         "id": "voltage",
         "reg_type": "holding",
         "address": 11,
@@ -145,7 +145,7 @@
         "readonly": true
       },
       {
-        "name": "Direction",
+        "name": "direction",
         "id": "direction",
         "reg_type": "holding",
         "address": 23,
@@ -162,7 +162,7 @@
         "group": "general"
       },
       {
-        "name": "Command",
+        "name": "command",
         "id": "command",
         "reg_type": "holding",
         "address": 18,
@@ -189,7 +189,7 @@
         "group": "general"
       },
       {
-        "name": "Positioning Mode",
+        "name": "positioning_mode",
         "id": "positioning_mode",
         "reg_type": "holding",
         "address": 84,
@@ -206,7 +206,7 @@
         "group": "general"
       },
       {
-        "name": "Speed",
+        "name": "speed",
         "id": "speed",
         "reg_type": "holding",
         "address": 72,
@@ -215,7 +215,7 @@
         "group": "general"
       },
       {
-        "name": "Position",
+        "name": "position",
         "id": "position",
         "reg_type": "holding",
         "address": 73,
@@ -225,7 +225,7 @@
         "group": "general"
       },
       {
-        "name": "Acceleration",
+        "name": "acceleration",
         "id": "acceleration",
         "reg_type": "holding",
         "address": 70,
@@ -235,7 +235,7 @@
         "group": "general"
       },
       {
-        "name": "Deceleration",
+        "name": "deceleration",
         "id": "deceleration",
         "reg_type": "holding",
         "address": 71,
@@ -245,7 +245,7 @@
         "group": "general"
       },
       {
-        "name": "Cont Rot Acceleration",
+        "name": "c_r_acceleration",
         "id": "c_r_accelerationtion",
         "reg_type": "holding",
         "address": 75,
@@ -255,7 +255,7 @@
         "group": "general"
       },
       {
-        "name": "Cont Rot Deceleration",
+        "name": "c_r_deceleration",
         "id": "c_r_deceleration",
         "reg_type": "holding",
         "address": 76,
@@ -265,7 +265,7 @@
         "group": "general"
       },
       {
-        "name": "Cont Rot Speed",
+        "name": "c_r_speed",
         "id": "c_r_speed",
         "reg_type": "holding",
         "address": 77,
@@ -275,7 +275,7 @@
         "group": "general"
       },
       {
-        "name": "Cont Rot Emergency Deceleration",
+        "name": "c_r_emerg_deceleration",
         "id": "c_r_emerg_deceleration",
         "reg_type": "holding",
         "address": 78,
@@ -285,7 +285,7 @@
         "group": "general"
       },
       {
-        "name": "Model",
+        "name": "model",
         "id": "model",
         "reg_type": "holding",
         "address": 93,
@@ -298,16 +298,43 @@
     "translations": {
       "en": {
         "mst24_title": "Oven MST-24 Stepper Driver",
-        "Current": "Load Current"
+        "Current": "Load Current",
+        "general": "General",
+        "hw_info": "HW Info",
+        "settings": "Settings",
+        "debug": "Debug",
+        "work_mode": "Work Mode",
+        "drive_mode": "Drive Mode",
+        "motor_type": "Motor Type",
+        "current_limit": "Current Limit (mA)",
+        "errors": "Errors",
+        "status": "Status",
+        "voltage": "Supply voltage",
+        "direction": "Direction",
+        "command": "Command",
+        "positioning_mode": "Positioning Mode",
+        "speed": "Speed",
+        "position": "Position",
+        "acceleration": "Acceleration",
+        "deceleration": "Deceleration",
+        "c_r_acceleration": "Const Rot Acceleration",
+        "c_r_deceleration": "Const Rot Deceleration",
+        "c_r_speed": "Const Rot Speed",
+        "c_r_emergency_deceleration": "Const Rot Emerg Deceleration",
+        "mA": "мА",
+        "no": "No",
+        "yes": "Yes",
+        "start": "Start",
+        "stop": "Stop"
       },
       "ru": {
         "mst24_title": "Драйвер шагового двигателя ОВЕН MST-24",
-        "General": "Общее",
-        "HW Info": "Данные модуля",
-        "Settings": "Настройки",
-        "Debug": "Диагностика",
-        "Work Mode": "Режим работы драйвера",
-        "Drive Mode": "Обратная связь",
+        "general": "Общее",
+        "hw_info": "Данные модуля",
+        "settings": "Настройки",
+        "debug": "Диагностика",
+        "work_mode": "Режим работы драйвера",
+        "drive_mode": "Обратная связь",
         "Return": "Возврат на исходную позицию",
         "No Return": "Запрет возврата",
         "Mechanic By DI": "Механический по команде со входа",
@@ -316,17 +343,17 @@
         "Command To Mechanic Return": "Команда механического возврата",
         "Command To Electronic Return": "Команда электронного возврата",
         "Return To Saved": "Команда возврата к текущему положению",
-        "Motor Type": "Тип мотора",
+        "motor_type": "Тип мотора",
         "2-Phase": "Двухфазный",
         "3-Phase": "Трёхфазный",
-        "Current Limit (mA)": "Ограничение тока двигателя, мА",
-        "Errors": "Ошибки",
-        "Status": "Состояние",
-        "Voltage": "Напряжение питания",
-        "Direction": "Направление движения",
+        "current_limit": "Ограничение тока двигателя, мА",
+        "errors": "Ошибки",
+        "status": "Состояние",
+        "voltage": "Напряжение питания",
+        "direction": "Направление движения",
         "Forward": "Прямое",
         "Reverse": "Обратное",
-        "Command": "Команда",
+        "command": "Команда",
         "Standby": "Ожидание",
         "Forward To Position": "Вперёд на позицию",
         "Reverse To Position": "Назад на позицию",
@@ -334,17 +361,17 @@
         "Reverse Cont": "Назад непрерывно",
         "Emergency Stop": "Экстренный останов",
         "Soft-stop": "Плавный останов",
-        "Positioning Mode": "Режим позиционирования",
+        "positioning_mode": "Режим позиционирования",
         "Incremental": "Инкрементальный",
         "Absolute": "Абсолютный",
-        "Speed": "Скорость",
-        "Position": "Позиция",
-        "Acceleration": "Ускорение",
-        "Deceleration": "Замедление",
-        "Cont Rot Acceleration": "Ускорение постоянного вращения",
-        "Cont Rot Deceleration": "Замедление постоянного вращения",
-        "Cont Rot Speed": "Скорость постоянного вращения",
-        "Cont Rot Emergency Deceleration": "Замедление экстренного останова",
+        "speed": "Скорость",
+        "position": "Позиция",
+        "acceleration": "Ускорение",
+        "deceleration": "Замедление",
+        "c_r_acceleration": "Ускорение постоянного вращения",
+        "c_r_deceleration": "Замедление постоянного вращения",
+        "c_r_speed": "Скорость постоянного вращения",
+        "c_r_emergency_deceleration": "Замедление экстренного останова",
         "mA": "мА",
         "No": "Нет",
         "Yes": "Да",
