--- a/templates/config-map12h-fw2-harmonics.json
+++ b/templates/config-map12h-fw2-harmonics.json
@@ -92,6 +92,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel1_l1",
                 "order": 1
             },
@@ -102,6 +103,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel1_l1",
                 "order": 2
             },
@@ -123,6 +125,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel1_l2",
                 "order": 1
             },
@@ -133,6 +136,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel1_l2",
                 "order": 2
             },
@@ -154,6 +158,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel1_l3",
                 "order": 1
             },
@@ -164,6 +169,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel1_l3",
                 "order": 2
             },
@@ -185,6 +191,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel2_l1",
                 "order": 1
             },
@@ -195,6 +202,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel2_l1",
                 "order": 2
             },
@@ -216,6 +224,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel2_l2",
                 "order": 1
             },
@@ -226,6 +235,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel2_l2",
                 "order": 2
             },
@@ -247,6 +257,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel2_l3",
                 "order": 1
             },
@@ -257,6 +268,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel2_l3",
                 "order": 2
             },
@@ -278,6 +290,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel3_l1",
                 "order": 1
             },
@@ -288,6 +301,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel3_l1",
                 "order": 2
             },
@@ -309,6 +323,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel3_l2",
                 "order": 1
             },
@@ -319,6 +334,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel3_l2",
                 "order": 2
             },
@@ -340,6 +356,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel3_l3",
                 "order": 1
             },
@@ -350,6 +367,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel3_l3",
                 "order": 2
             },
@@ -371,6 +389,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel4_l1",
                 "order": 1
             },
@@ -381,6 +400,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel4_l1",
                 "order": 2
             },
@@ -402,6 +422,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel4_l2",
                 "order": 1
             },
@@ -412,6 +433,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel4_l2",
                 "order": 2
             },
@@ -433,6 +455,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel4_l3",
                 "order": 1
             },
@@ -443,6 +466,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel4_l3",
                 "order": 2
             },
