--- a/templates/config-map12h-fw2.json
+++ b/templates/config-map12h-fw2.json
@@ -98,6 +98,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel1_l1",
                 "order": 1
             },
@@ -108,6 +109,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel1_l1",
                 "order": 2
             },
@@ -129,6 +131,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel1_l2",
                 "order": 1
             },
@@ -139,6 +142,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel1_l2",
                 "order": 2
             },
@@ -160,6 +164,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel1_l3",
                 "order": 1
             },
@@ -170,6 +175,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel1_l3",
                 "order": 2
             },
@@ -191,6 +197,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel2_l1",
                 "order": 1
             },
@@ -201,6 +208,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel2_l1",
                 "order": 2
             },
@@ -222,6 +230,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel2_l2",
                 "order": 1
             },
@@ -232,6 +241,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel2_l2",
                 "order": 2
             },
@@ -253,6 +263,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel2_l3",
                 "order": 1
             },
@@ -263,6 +274,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel2_l3",
                 "order": 2
             },
@@ -284,6 +296,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel3_l1",
                 "order": 1
             },
@@ -294,6 +307,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel3_l1",
                 "order": 2
             },
@@ -315,6 +329,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel3_l2",
                 "order": 1
             },
@@ -325,6 +340,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel3_l2",
                 "order": 2
             },
@@ -346,6 +362,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel3_l3",
                 "order": 1
             },
@@ -356,6 +373,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel3_l3",
                 "order": 2
             },
@@ -377,6 +395,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel4_l1",
                 "order": 1
             },
@@ -387,6 +406,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel4_l1",
                 "order": 2
             },
@@ -408,6 +428,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel4_l2",
                 "order": 1
             },
@@ -418,6 +439,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel4_l2",
                 "order": 2
             },
@@ -439,6 +461,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel4_l3",
                 "order": 1
             },
@@ -449,6 +472,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel4_l3",
                 "order": 2
             },
