--- a/templates/config-map6s-fw2.json
+++ b/templates/config-map6s-fw2.json
@@ -62,6 +62,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel_1",
                 "order": 1
             },
@@ -72,6 +73,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel_1",
                 "order": 2
             },
@@ -93,6 +95,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel_2",
                 "order": 1
             },
@@ -103,6 +106,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel_2",
                 "order": 2
             },
@@ -124,6 +128,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel_3",
                 "order": 1
             },
@@ -134,6 +139,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel_3",
                 "order": 2
             },
@@ -155,6 +161,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel_4",
                 "order": 1
             },
@@ -165,6 +172,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel_4",
                 "order": 2
             },
@@ -186,6 +194,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel_5",
                 "order": 1
             },
@@ -196,6 +205,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel_5",
                 "order": 2
             },
@@ -217,6 +227,7 @@
                 "reg_type": "holding",
                 "format": "u16",
                 "min": 0,
+                "default": 0,
                 "group": "channel_6",
                 "order": 1
             },
@@ -227,6 +238,7 @@
                 "format": "s16",
                 "min": -32768,
                 "max": 32767,
+                "default": 0,
                 "group": "channel_6",
                 "order": 2
             },
