WB-MAP3EV: Add separate signature

--- a/templates/config-map3ev.json
+++ b/templates/config-map3ev.json
@@ -6,6 +6,10 @@
         {
             "signature": "MAP3E",
             "fw": "2.0.0"
+        },
+        {
+            "signature": "WB-MAP3EV",
+            "fw": "2.10.8"
         }
     ],
     "device": {
