--- a/templates/config-map3ev.json
+++ b/templates/config-map3ev.json
@@ -8,8 +8,7 @@
             "fw": "2.0.0"
         },
         {
-            "signature": "WB-MAP3EV",
-            "fw": "2.10.8"
+            "signature": "WB-MAP3EV"
         }
     ],
     "device": {
