add enabled:false for new channels

--- a/templates/config-carel-mu-rack.json
+++ b/templates/config-carel-mu-rack.json
@@ -2099,14 +2099,16 @@
                 "group": "alarms",
                 "reg_type": "discrete",
                 "address": 44,
-                "type": "switch"
+                "type": "switch",
+                "enabled": false,
             },
             {
                 "name": "Alarm General Low Suction Pressure 2",
                 "group": "alarms",
                 "reg_type": "discrete",
                 "address": 35,
-                "type": "switch"
+                "type": "switch",
+                "enabled": false,
             },
             {
                 "name": "General Discharge Pressure Switch",
